--- a/.editorconfig
+++ b/.editorconfig
@@ -4,6 +4,10 @@ root = true
 indent_style = space
 indent_size = 2
 
+[*.{bsv, bs}]
+indent_style = space
+indent_size = 2
+
 [*]
 charset=utf-8
 insert_final_newline=true
