--- a/bors.toml
+++ b/bors.toml
@@ -1,6 +1,8 @@
 status = [ "build all%" ]
 block_labels = [ "S-wip", "S-nomerge" ]
+pr_status = [ "DCO" ]
 
+use_squash_merge = true
 delete_merged_branches = true
 timeout_sec = 7200 # two hours
 
