--- a/bors.toml
+++ b/bors.toml
@@ -2,7 +2,6 @@ status = [ "build all%" ]
 block_labels = [ "S-wip", "S-nomerge" ]
 pr_status = [ "DCO" ]
 
-use_squash_merge = true
 delete_merged_branches = true
 timeout_sec = 7200 # two hours
 
@@ -11,3 +10,11 @@ timeout_sec = 7200 # two hours
 
 # required_approvals = 1
 # use_codeowners = true
+
+## [NOTE] (aseipp): squash merge would be nice, but unfortunately it does
+## nuke any GPG signatures you might have (somewhat annoying), but it also
+## leaves the signed-off-by lines as well, which is what I really hate; in
+## theory bors should be able to do this all on its own properly, but...
+## sigh...
+
+use_squash_merge = false
