--- a/bors.toml
+++ b/bors.toml
@@ -1,6 +1,6 @@
 status = [ "build all%" ]
 block_labels = [ "S-wip", "S-nomerge" ]
-pr_status = [ "DCO" ]
+pr_status = [ "DCO", "Semantic Pull Request" ]
 
 delete_merged_branches = true
 timeout_sec = 7200 # two hours
